# notion-local-ops-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: dev-tunnel.sh
src/notion_local_ops_mcp/: config.py  executors.py  files.py  gitops.py  http_compat.py  patching.py  pathing.py  server.py  session.py  skills.py  tasks.py
tests/: test_config.py  test_delegate_tasks.py  test_files_tools.py  test_git_tools.py  test_mcp_local_simulation.py  test_patch_tools.py  test_server_info.py  test_server_tools.py  test_server_transport.py  test_session_cwd.py  test_skills_tools.py
